--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -126,6 +126,12 @@ components:
         underline: false, icon: ''}
       name: lb_35
       layout_properties: {grid_position: 'PAUJKU,EULLWP'}
+    - type: Plot
+      properties: {}
+      name: plot_1
+      layout_properties: {grid_position: 'RCKUYH,IDEMKZ'}
+      data_bindings:
+      - {property: data, code: 'self.item['''']'}
   - type: ColumnPanel
     properties: {col_widths: '{}'}
     name: column_panel_3
