Created Data; Edited Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,7 +1,8 @@
 unique_ids:
   forms:
     Form1: LD6UCOTJ4RVEUAZ2KRK2JGBCEOADZKDL
-  modules: {}
+  modules:
+    Data: '1673440869099991671259315.7528'
   server_modules: {}
   assets:
     standard-page.html: DBAA2DUXRY7VSWBLWK6HZTEPKTJ7LXBR
