--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -127,11 +127,12 @@ components:
       name: lb_35
       layout_properties: {grid_position: 'PAUJKU,EULLWP'}
     - type: Plot
-      properties: {}
+      properties: {spacing_above: small, spacing_below: small, height: 450, visible: true,
+        tooltip: '', interactive: true}
       name: plot_1
-      layout_properties: {grid_position: 'RCKUYH,IDEMKZ'}
-      data_bindings:
-      - {property: data, code: 'self.item['''']'}
+      layout_properties: {grid_position: 'RCKUYH,IDEMKZ', row_background: 'theme:Primary
+          Container'}
+      data_bindings: []
   - type: ColumnPanel
     properties: {col_widths: '{}'}
     name: column_panel_3
