--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -176,7 +176,7 @@ components:
   - type: ColumnPanel
     properties: {col_widths: '{}'}
     name: column_panel_3
-    layout_properties: {grid_position: 'OGCEYX,IBUKDW', full_width_row: true}
+    layout_properties: {grid_position: 'OGCEYX,IBUKDW BPAXWO,ISAWTP', full_width_row: true}
     components:
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -185,6 +185,34 @@ components:
         italic: false, background: '', bold: false, underline: true, icon: ''}
       name: label_2
       layout_properties: {grid_position: 'YDQDXP,ATXMIL'}
+  - type: DataGrid
+    properties:
+      role: null
+      columns:
+      - {id: LAVQQZ, title: date, data_key: date, $$hashKey: 'object:165558'}
+      - {id: APQHOG, title: SYS, data_key: sys, $$hashKey: 'object:165559'}
+      - {id: GCJKIU, title: DIA, data_key: dia, $$hashKey: 'object:165560'}
+      - {id: VZPVKB, title: PUL, data_key: pul, $$hashKey: 'object:165601'}
+      - {id: XTQSTS, title: MEAN, data_key: mean, $$hashKey: 'object:165603'}
+      - {id: MDFTDB, title: N, data_key: n, $$hashKey: 'object:165605'}
+      auto_header: true
+      tooltip: ''
+      border: ''
+      foreground: ''
+      rows_per_page: 20
+      visible: true
+      wrap_on: never
+      show_page_controls: true
+      spacing_above: small
+      spacing_below: small
+      background: ''
+    name: data_grid_1
+    layout_properties: {grid_position: 'OGCEYX,IBUKDW YMAIEF,YPNIRU'}
+    components:
+    - type: RepeatingPanel
+      properties: {spacing_above: none, spacing_below: none, item_template: Form1.RowTemplate1}
+      name: repeating_panel_1
+      layout_properties: {}
 - type: FlowPanel
   properties: {}
   name: navbar_links
