--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -21,25 +21,33 @@ components:
     name: column_panel_2
     layout_properties: {grid_position: 'OGCEYX,RVEUVV', full_width_row: true}
     components:
-    - type: Button
-      properties: {role: tonal-button, align: left, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: b_up, font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
-      name: b_up
-      layout_properties: {grid_position: 'INEXFP,WJQUTU'}
-      event_bindings: {click: b_up_click}
-    - type: Button
-      properties: {role: tonal-button, align: left, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: b_dn, font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
-      name: b_dn
-      layout_properties: {grid_position: 'INEXFP,MCGLOA'}
     - type: Label
       properties: {}
       name: label_1
       layout_properties: {grid_position: 'INEXFP,SJMPMA'}
+    - type: FlowPanel
+      properties: {}
+      name: flow_panel_1
+      layout_properties: {grid_position: 'HPYIJP,DBMCDD'}
+      components:
+      - type: Button
+        properties: {role: tonal-button, align: full, tooltip: '', border: '', enabled: true,
+          foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+          icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
+          underline: false, icon: 'fa:chevron-up'}
+        name: b_up
+        layout_properties: {}
+      - type: Spacer
+        properties: {height: 32}
+        name: spacer_2
+        layout_properties: {}
+      - type: Button
+        properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+          foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+          underline: false, icon: 'fa:chevron-down'}
+        name: b_dn
+        layout_properties: {}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: date, font_size: 20, font: '', spacing_above: small,
