--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,7 +1,9 @@
 is_package: true
 container:
   type: HtmlTemplate
-  properties: {html: '@theme:standard-page.html'}
+  properties: {tooltip: '', background: '16711680', foreground: '', border: '', visible: true,
+    role: null, html: '@theme:standard-page.html'}
+  data_bindings: []
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
@@ -197,10 +199,11 @@ components:
     properties:
       role: null
       columns:
-      - {id: LAVQQZ, title: date, data_key: date, $$hashKey: 'object:165558'}
-      - {id: APQHOG, title: SYS, data_key: sys, $$hashKey: 'object:165559'}
-      - {id: GCJKIU, title: DIA, data_key: dia, $$hashKey: 'object:165560'}
-      - {id: VZPVKB, title: PUL, data_key: pul, $$hashKey: 'object:165601'}
+      - {id: LAVQQZ, title: date, data_key: '', $$hashKey: 'object:165558'}
+      - {id: APQHOG, title: SYS, data_key: '', $$hashKey: 'object:165559', width: '',
+        expand: false}
+      - {id: GCJKIU, title: DIA, data_key: '', $$hashKey: 'object:165560'}
+      - {id: VZPVKB, title: PUL, data_key: '', $$hashKey: 'object:165601'}
       - {id: XTQSTS, title: MEAN, data_key: mean, $$hashKey: 'object:165603'}
       - {id: MDFTDB, title: N, data_key: n, $$hashKey: 'object:165605'}
       auto_header: true
@@ -213,12 +216,14 @@ components:
       show_page_controls: true
       spacing_above: small
       spacing_below: small
-      background: ''
+      background: rgba(69,183,249,0.3)
     name: data_grid_1
     layout_properties: {grid_position: 'OGCEYX,IBUKDW YMAIEF,YPNIRU'}
     components:
     - type: RepeatingPanel
-      properties: {spacing_above: none, spacing_below: none, item_template: Form1.RowTemplate1}
+      properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
+        visible: true, spacing_above: none, spacing_below: none, item_template: Form1.RowTemplate1,
+        background: ''}
       name: repeating_panel_1
       layout_properties: {}
 - type: FlowPanel
