--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -33,16 +33,12 @@ components:
       layout_properties: {grid_position: 'HPYIJP,DBMCDD'}
       components:
       - type: Button
-        properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+        properties: {role: tonal-button, align: left, tooltip: '', border: '', enabled: true,
           foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
           icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
           underline: false, icon: 'fa:arrow-up'}
         name: b_up
         layout_properties: {width: 18.388900000000007}
-      - type: Spacer
-        properties: {height: 32}
-        name: spacer_2
-        layout_properties: {}
       - type: Button
         properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
           foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
@@ -50,6 +46,7 @@ components:
           underline: false, icon: 'fa:arrow-down'}
         name: b_dn
         layout_properties: {width: 37.38890000000001}
+        event_bindings: {click: b_dn_click}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: date, font_size: 20, font: '', spacing_above: small,
