--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,6 +2,7 @@ unique_ids:
   forms:
     Form1: LD6UCOTJ4RVEUAZ2KRK2JGBCEOADZKDL
     Form1.RowTemplate1: '1673624732843791916531249.1451'
+    Form2: '1674756433267936412531511.7546'
   modules:
     Data: '1673440869099991671259315.7528'
   server_modules: {}
