--- a/anvil.yaml
+++ b/anvil.yaml
@@ -3,7 +3,7 @@ services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
-startup: {type: form, module: Form2}
+startup: {type: form, module: Test}
 package_name: M3_App_1
 allow_embedding: false
 name: M3 App 1
