Edited Data, Form1, Form1.RowTemplate1, Test and 2 more

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -10,4 +10,5 @@ name: M3 App 1
 runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
   server_spec: null}
 startup_form: null
+uplink_visible: true
 renamed: true
