Created kag1.jpg; Edited settings, Data and Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -8,5 +8,6 @@ unique_ids:
     Data: '1673440869099991671259315.7528'
   server_modules: {}
   assets:
+    kag1.jpg: '167499787548447257344142.57965'
     standard-page.html: DBAA2DUXRY7VSWBLWK6HZTEPKTJ7LXBR
     theme.css: XKNRN4SFF34IMREX52NQWF2Y6VCAGYB7
