--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -84,9 +84,9 @@ components:
       layout_properties: {grid_position: 'XTKGAB,EBIYQZ'}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: N, font_size: 20, font: '', spacing_above: small, icon_align: left,
-        spacing_below: small, italic: false, background: '', bold: false, underline: false,
-        icon: ''}
+        visible: true, text: afib, font_size: 20, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
       name: lb_6
       layout_properties: {grid_position: 'XTKGAB,FDPAON'}
     - type: Label
@@ -202,7 +202,7 @@ components:
       - {id: GCJKIU, title: DIA, data_key: '', $$hashKey: 'object:165560'}
       - {id: VZPVKB, title: PUL, data_key: '', $$hashKey: 'object:165601'}
       - {id: XTQSTS, title: MEAN, data_key: mean, $$hashKey: 'object:165603'}
-      - {id: MDFTDB, title: N, data_key: n, $$hashKey: 'object:165605'}
+      - {id: MDFTDB, title: afib, data_key: afib, $$hashKey: 'object:165605'}
       auto_header: true
       tooltip: ''
       border: ''
