--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,6 +2,7 @@ unique_ids:
   forms:
     Form1: LD6UCOTJ4RVEUAZ2KRK2JGBCEOADZKDL
     Form1.RowTemplate1: '1673624732843791916531249.1451'
+    Filter: '1675354309179242631683315.11676'
     Test: '1674756433267936412531511.7546'
     Test_MAIN: '1674813062187537708518661.96277'
   modules:
