--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,4 +1,43 @@
-container: {type: ColumnPanel}
-components: []
+container:
+  type: ColumnPanel
+  properties: {col_widths: '{"HYAPCB":5,"TJINLW":6,"MFIRLQ":4,"LXPTVL":5,"IQWZLZ":47}'}
+components:
+- type: RadioButton
+  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+    enabled: true, foreground: '', value: '', visible: true, text: d, font_size: null,
+    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+    bold: false, group_name: fix_range, underline: false}
+  name: d
+  layout_properties: {grid_position: 'JJCFHV,HYAPCB'}
+  event_bindings: {clicked: d_clicked}
+- type: RadioButton
+  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+    enabled: true, foreground: '', value: '', visible: true, text: w, font_size: null,
+    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+    bold: false, group_name: fix_range, underline: false}
+  name: w
+  layout_properties: {grid_position: 'JJCFHV,MFIRLQ'}
+- type: RadioButton
+  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+    enabled: true, foreground: '', value: '', visible: true, text: m, font_size: null,
+    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+    bold: false, group_name: fix_range, underline: false}
+  name: m
+  layout_properties: {grid_position: 'JJCFHV,TJINLW'}
+  event_bindings: {clicked: m_clicked}
+- type: RadioButton
+  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+    enabled: true, foreground: '', value: '', visible: true, text: 3m, font_size: null,
+    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+    bold: false, group_name: fix_range, underline: false}
+  name: radio_button_1
+  layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
+- type: RadioButton
+  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+    enabled: true, foreground: '', value: '', visible: true, text: time_slot, font_size: null,
+    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+    bold: false, group_name: fix_range, underline: false}
+  name: time_slot
+  layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
 is_package: true
 custom_component: true
