Edited Filter and Form1

--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -242,3 +242,7 @@ components:
       underline: false, icon: ''}
     name: button_1
     layout_properties: {grid_position: 'VONSXA,WHAFCH'}
+  - type: form:Filter
+    properties: {}
+    name: filter_1
+    layout_properties: {grid_position: 'EGBAPR,PXWOAC'}
