--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -1,43 +1,99 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{"HYAPCB":5,"TJINLW":6,"MFIRLQ":4,"LXPTVL":5,"IQWZLZ":47}'}
+  properties: {col_widths: '{}'}
 components:
-- type: RadioButton
-  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-    enabled: true, foreground: '', value: '', visible: true, text: d, font_size: null,
-    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-    bold: false, group_name: fix_range, underline: false}
-  name: d
-  layout_properties: {grid_position: 'JJCFHV,HYAPCB'}
-  event_bindings: {clicked: d_clicked}
-- type: RadioButton
-  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-    enabled: true, foreground: '', value: '', visible: true, text: w, font_size: null,
-    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-    bold: false, group_name: fix_range, underline: false}
-  name: w
-  layout_properties: {grid_position: 'JJCFHV,MFIRLQ'}
-- type: RadioButton
-  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-    enabled: true, foreground: '', value: '', visible: true, text: m, font_size: null,
-    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-    bold: false, group_name: fix_range, underline: false}
-  name: m
-  layout_properties: {grid_position: 'JJCFHV,TJINLW'}
-  event_bindings: {clicked: m_clicked}
-- type: RadioButton
-  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-    enabled: true, foreground: '', value: '', visible: true, text: 3m, font_size: null,
-    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-    bold: false, group_name: fix_range, underline: false}
-  name: radio_button_1
-  layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
-- type: RadioButton
-  properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-    enabled: true, foreground: '', value: '', visible: true, text: time_slot, font_size: null,
-    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-    bold: false, group_name: fix_range, underline: false}
-  name: time_slot
-  layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
+- type: FlowPanel
+  properties: {role: null, spacing: medium, align: left, tooltip: '', border: solid,
+    foreground: '', visible: true, spacing_above: small, spacing_below: small, background: ''}
+  name: flow_panel_2
+  layout_properties: {grid_position: 'HGFGXB,NWXPOO'}
+  components:
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: d, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: d
+    layout_properties: {grid_position: 'JJCFHV,HYAPCB'}
+    event_bindings: {clicked: d_clicked}
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: w, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: w
+    layout_properties: {grid_position: 'JJCFHV,MFIRLQ'}
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: m, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: m
+    layout_properties: {grid_position: 'JJCFHV,TJINLW'}
+    event_bindings: {clicked: m_clicked}
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: 3m, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: radio_button_1_copy
+    layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: time_slot, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: time_slot_copy
+    layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
+- type: FlowPanel
+  properties: {}
+  name: flow_panel_1
+  layout_properties: {grid_position: 'OSHLVW,WIHBNY'}
+  components:
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: 3m, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: radio_button_1
+    layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: time_slot, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: time_slot
+    layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: Time FROM - TO, font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
+  name: t_from
+  layout_properties: {grid_position: 'NDJMBI,JCQVTI'}
+- type: LinearPanel
+  properties: {}
+  name: linear_panel_1
+  layout_properties: {grid_position: 'DEDTVD,TMPOUV'}
+  components:
+  - type: DatePicker
+    properties: {}
+    name: date_picker_1
+    layout_properties: {}
+- type: DatePicker
+  properties: {}
+  name: date_picker_2
+  layout_properties: {grid_position: 'AXUESG,RIPMES'}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: Day ZONE, font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
+  name: d_zone
+  layout_properties: {grid_position: 'LGBALO,RCTBGY'}
+- type: DropDown
+  properties: {}
+  name: drop_down_1
+  layout_properties: {grid_position: 'GVBMFN,CCDJVX'}
 is_package: true
 custom_component: true
