--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -3,7 +3,7 @@ container:
   properties: {col_widths: '{}'}
 components:
 - type: FlowPanel
-  properties: {role: null, spacing: medium, align: left, tooltip: '', border: solid,
+  properties: {role: null, spacing: medium, align: left, tooltip: '', border: '',
     foreground: '', visible: true, spacing_above: small, spacing_below: small, background: ''}
   name: flow_panel_2
   layout_properties: {grid_position: 'HGFGXB,NWXPOO'}
@@ -40,30 +40,16 @@ components:
     layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
   - type: RadioButton
     properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: time_slot, font_size: null,
+      enabled: true, foreground: '', value: '', visible: true, text: range, font_size: null,
       font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
       bold: false, group_name: fix_range, underline: false}
-    name: time_slot_copy
+    name: range
     layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
 - type: FlowPanel
   properties: {}
   name: flow_panel_1
   layout_properties: {grid_position: 'OSHLVW,WIHBNY'}
-  components:
-  - type: RadioButton
-    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: 3m, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, group_name: fix_range, underline: false}
-    name: radio_button_1
-    layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
-  - type: RadioButton
-    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: time_slot, font_size: null,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, group_name: fix_range, underline: false}
-    name: time_slot
-    layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
+  components: []
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: Time FROM - TO, font_size: null, font: '', spacing_above: small, icon_align: left,
