--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -58,7 +58,7 @@ components:
     text: Time FROM - TO, font_size: null, font: '', spacing_above: small, icon_align: left,
     spacing_below: small, italic: false, background: '', bold: false, underline: false,
     icon: ''}
-  name: t_from
+  name: t_from_to
   layout_properties: {grid_position: 'NDJMBI,JCQVTI'}
 - type: LinearPanel
   properties: {}
@@ -67,7 +67,7 @@ components:
   components:
   - type: DatePicker
     properties: {}
-    name: date_picker_1
+    name: t_from
     layout_properties: {}
 - type: DatePicker
   properties: {}
