--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -14,7 +14,7 @@ components:
   components:
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"UCFLLP":10,"GIBSXC":10,"IGQZJU":10,"QJVERU":10,"EBIYQZ":10,"FDPAON":10}',
       spacing_below: small, background: ''}
     name: column_panel_2
     layout_properties: {grid_position: 'OGCEYX,RVEUVV', full_width_row: true}
@@ -94,37 +94,37 @@ components:
       layout_properties: {grid_position: 'SLLSPA,KMZJLR', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '223', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '2', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_22
       layout_properties: {grid_position: 'SLLSPA,GDRUVF', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '122', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '3', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_23
       layout_properties: {grid_position: 'SLLSPA,VKKJKM', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '140', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '4', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_24
       layout_properties: {grid_position: 'SLLSPA,YCOPYM', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '156', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
-        underline: false, icon: ''}
+        visible: true, text: '5', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: true, underline: false,
+        icon: ''}
       name: lb_25
       layout_properties: {grid_position: 'SLLSPA,WEEEPH', full_width_row: false}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '1234', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
-        underline: false, icon: ''}
+        visible: true, text: '6', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: true, underline: false,
+        icon: ''}
       name: lb_26
       layout_properties: {grid_position: 'SLLSPA,TIWABF', full_width_row: false}
     - type: Label
