--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -7,14 +7,14 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: huge, spacing_above: small, col_widths: '{"RVEUVV":30,"IBUKDW":30}',
-    spacing_below: small, background: ''}
+    wrap_on: mobile, col_spacing: huge, spacing_above: none, col_widths: '{"RVEUVV":30,"IBUKDW":30}',
+    spacing_below: none, background: ''}
   name: content_panel
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"UCFLLP":10,"GIBSXC":10,"IGQZJU":10,"QJVERU":10,"EBIYQZ":10,"FDPAON":10}',
+      wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"UCFLLP":10,"GIBSXC":10,"IGQZJU":10,"QJVERU":10,"EBIYQZ":10,"FDPAON":10}',
       spacing_below: small, background: ''}
     name: column_panel_2
     layout_properties: {grid_position: 'OGCEYX,RVEUVV', full_width_row: true}
@@ -136,37 +136,37 @@ components:
       layout_properties: {grid_position: 'PAUJKU,JGVGHQ', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '127', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '2', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_32
       layout_properties: {grid_position: 'PAUJKU,UBEAOY', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '84', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '3', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_33
       layout_properties: {grid_position: 'PAUJKU,ICBJUP', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '66', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '4', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: lb_34
       layout_properties: {grid_position: 'PAUJKU,UZRLFK', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '98', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-        underline: false, icon: ''}
+        visible: true, text: '5', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: true, underline: false,
+        icon: ''}
       name: lb_35
       layout_properties: {grid_position: 'PAUJKU,EULLWP', full_width_row: true}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: '9876', font_size: 48, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
-        underline: false, icon: ''}
+        visible: true, text: '6', font_size: 48, font: '', spacing_above: small, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: true, underline: false,
+        icon: ''}
       name: lb_36
       layout_properties: {grid_position: 'PAUJKU,QRUSTM', full_width_row: true}
     - type: Plot
@@ -177,7 +177,9 @@ components:
           Container'}
       data_bindings: []
   - type: ColumnPanel
-    properties: {col_widths: '{}'}
+    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{}',
+      spacing_below: small, background: ''}
     name: column_panel_3
     layout_properties: {grid_position: 'OGCEYX,IBUKDW BPAXWO,ISAWTP', full_width_row: true}
     components:
@@ -224,7 +226,9 @@ components:
   name: navbar_links
   layout_properties: {slot: nav-right}
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{}', spacing_below: small,
+    background: ''}
   name: column_panel_1
   layout_properties: {slot: left-nav}
   components:
