--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -249,4 +249,4 @@ components:
   - type: form:Filter
     properties: {}
     name: filter_1
-    layout_properties: {grid_position: 'EGBAPR,PXWOAC'}
+    layout_properties: {grid_position: 'EGBAPR,YSUNZO'}
