--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -69,8 +69,7 @@ components:
     properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
       placeholder: Date FROM, border: '', enabled: true, foreground: '', visible: true,
       font_size: null, font: '', spacing_above: small, spacing_below: small, italic: false,
-      date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/
-        %m/ %d'}
+      date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
     name: t_from
     layout_properties: {}
     data_bindings:
@@ -80,8 +79,8 @@ components:
   properties: {role: null, align: left, max_date: '', pick_time: true, tooltip: '',
     placeholder: Date TO, border: '', enabled: true, foreground: '', visible: true,
     font_size: null, font: '', spacing_above: small, spacing_below: small, italic: false,
-    date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/
-      %m/ %d'}
+    date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d
+      %H:%M'}
   name: t_to
   layout_properties: {grid_position: 'AXUESG,RIPMES'}
   data_bindings:
