--- a/client_code/Import/form_template.yaml
+++ b/client_code/Import/form_template.yaml
@@ -53,3 +53,4 @@ components:
       icon: fa:upload
     name: file_loader_1
     layout_properties: {}
+    event_bindings: {change: file_loader_1_change}
