--- a/client_code/Import/form_template.yaml
+++ b/client_code/Import/form_template.yaml
@@ -38,7 +38,7 @@ components:
       files: []
       foreground: ''
       visible: true
-      text: Upload
+      text: Import
       font_size: null
       font: ''
       spacing_above: small
@@ -50,7 +50,7 @@ components:
       bold: false
       underline: false
       multiple: false
-      icon: fa:upload
+      icon: fa:download
     name: file_loader_1
     layout_properties: {}
     event_bindings: {change: file_loader_1_change}
