--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -244,6 +244,10 @@ components:
     properties: {}
     name: filter_1
     layout_properties: {grid_position: 'EGBAPR,YSUNZO'}
+  - type: form:Import
+    properties: {}
+    name: import_1
+    layout_properties: {grid_position: 'ZZECCS,DCJKEZ'}
 - type: Label
   properties: {role: title, align: left, tooltip: '', border: '', foreground: 'theme:Primary',
     visible: true, text: Overview, font_size: null, font: '', spacing_above: small,
